// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchImports should follow dynamic renames in imports 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Room key=(testImportTwo)><ShortName>StubFoo</ShortName></Room>
    <Room key=(testNonImportTwo)>
        <Exit to=(testImportTwo)>test exit</Exit>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImports should import multilevel and avoid colliding stub names 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Room key=(stub)><ShortName>Asset Three</ShortName></Room>
    <Room key=(Stub1)><ShortName>AssetThreeStub</ShortName></Room>
    <Room key=(testImportThree)>
        <Description>Asset Two</Description>
        <Exit to=(Stub1)>test exit</Exit>
        <Exit to=(stub)>test exit</Exit>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImports should properly stub out features in room description 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Room key=(testRoomWithFeatures)>
        <Description><Link to=(featureImport)>Test</Link></Description>
    </Room>
    <Feature key=(featureImport) />
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImports should recursive fetch one level of element and stubs when passed import key 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Room key=(testImportOne)>
        <Description>OneTwo</Description>
        <Exit to=(testImportStubOne)>test exit one</Exit>
    </Room>
    <Room key=(testImportStubOne)><ShortName>StubTwo</ShortName></Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImports should return element and stubs when passed non-import key 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Room key=(testNonImport)>
        <Description>DescriptionOne</Description>
        <Exit to=(testNonImportStub)>test exit</Exit>
    </Room>
    <Room key=(testNonImportStub)><ShortName>StubOne</ShortName></Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImports should return empty when passed no keys 1`] = `
{
  "importsByAsset": [
    {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal) />",
    },
  ],
  "messageType": "FetchImports",
}
`;
